# vrchat-photo-server

./: .dockerignore  .gitignore  Dockerfile  LICENSE  compose.yml  create_user.py  go.mod  go.sum  main.py  pyproject.toml
app/: rate_limiter.py  security.py  utils.py
app/db/: connection.py  images.py  proxy_cache.py  token_blocklist.py  users.py
app/models/: image.py
app/routers/: auth.py  images.py  proxy.py
cmd/server/: main.go
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: admin.ts  auth.ts  client.ts  images.ts  profile.ts
frontend/src/components/: AdminGuard.tsx  AuthGuard.tsx  ImageList.tsx  Layout.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: AdminProxyCachePage.tsx  AdminProxyHostsPage.tsx  AdminUserImagesPage.tsx  AdminUsersPage.tsx  ImagesPage.tsx  LoginPage.tsx  ProfilePage.tsx  UploadPage.tsx
internal/db/: db.go  images.go  proxy_allowed_hosts.go  proxy_cache.go  refresh_tokens.go  users.go  variants.go
internal/handler/: admin.go  admin_proxy.go  admin_users.go  auth.go  files.go  images.go  profile.go  proxy.go  respond.go
internal/imgproc/: process.go
internal/jwt/: jwt.go
internal/middleware/: realip.go  session.go
internal/ratelimit/: limiter.go
internal/security/: ssrf.go
static/: dark.css  images.html  login.html  upload.html
